--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                     <button class="main-btn">Start Building Your Vault</button>
                     <button class="btn-2">See How It Works</button>
                 </div>
+                <div class="hero-btn">
+                    <button class="main-btn">Start Building Your Vault</button>
+                    <button class="btn-2">See How It Works</button>
+                </div>
             </div>
         </section>
     </header>
