--- a/index.html
+++ b/index.html
@@ -43,7 +43,38 @@
         </section>
     </header>
 
+ <main>
+        <section class="problems">
+            <h2 class="section-title">Notes Don't Fail, Structure Does.</h2>
+            <p class="section-desc">You're not bad at learning. Your tools just weren't built for how knowledge actually
+                works.</p>
 
+            <div class="card-container">
+                <div class="card">
+                    <div class="icon-circle"><img src="./assets/Vector.png"></div>
+                    <h3 class="card-h">Scattered Notes</h3>
+                    <p class="card-p">Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card">
+                    <div class="icon-circle"><img src="./assets/Vector.png"></div>
+                    <h3 class="card-h">Bookmark Overload</h3>
+                    <p class="card-p">Hundreds of saved links you'll never revisit or remember.</p>
+                </div>
+                <div class="card">
+                    <div class="icon-circle"><img src="./assets/Vector.png"></div>
+                    <h3 class="card-h">No Idea Connections</h3>
+                    <p class="card-p">Insights stay isolated, never building into bigger understanding.</p>
+                </div>
+                <div class="card">
+                    <div class="icon-circle"><img src="./assets/Vector.png"></div>
+                    <h3 class="card-h">Forgetting What WeLearned</h3>
+                    <p class="card-p">Knowledge fades because there's no system to retain it.</p>
+                </div>
+            </div>
+        </section>
+
+      
+    </main>
 
 </body>
 
