Ready To Think More Clearly? section add

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </section>
-        
+
         <section class="rd-section">
             <img src="./assets/knowledge.png" alt="knowledge">
             <div class="solution">
@@ -90,11 +90,19 @@
                     <li>Build lasting knowledge through reflection prompts</li>
                     <li>Find anything instantly with semantic search</li>
                 </ul>
-
             </div>
-
-
         </section>
+
+         <section class="cta-section">
+            <div class="cta-box">
+                <h2 class="cta-box h2">Ready To Think More Clearly?</h2>
+                <p style="color: #627382;">Join thousands of learners who are building their personal knowledge vaults.<br> Start free, no credit
+                    card required.</p>
+                <button class="main-btn">Get Early Access </button>
+                <p class="small-note">Free during early access • No credit card needed"</p>
+            </div>
+        </section>
+
 
 
     </main>
