Footer section add

--- a/index.html
+++ b/index.html
@@ -93,15 +93,30 @@
             </div>
         </section>
 
-         <section class="cta-section">
+        <section class="cta-section">
             <div class="cta-box">
                 <h2 class="cta-box h2">Ready To Think More Clearly?</h2>
-                <p style="color: #627382;">Join thousands of learners who are building their personal knowledge vaults.<br> Start free, no credit
+                <p style="color: #627382;">Join thousands of learners who are building their personal knowledge
+                    vaults.<br> Start free, no credit
                     card required.</p>
                 <button class="main-btn">Get Early Access </button>
                 <p class="small-note">Free during early access • No credit card needed"</p>
             </div>
         </section>
+
+        <footer class="foo">
+            <div class="footer-content">
+                <div class="logo"> <img src="./assets/logo-footer.png">
+                </div>
+                <div class="socials">
+                    <p>Social Links</p>
+                    <img src="./assets/Vector.png">
+                    <img src="./assets/Vector.png">
+                    <img src="./assets/Vector.png">
+                </div>
+            </div>
+            <p class="copyright">© 2025 Personal Knowledge Vault. All rights reserved.</p>
+        </footer>
 
 
 
