--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <p class="hero-p">A private space to store notes, links, and learning summaries — designed to
                     help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                 <div class="hero-btn">
-                    <button class="main-btn">Start Building Your Vault</button>
-                    <button class="btn-2">See How It Works</button>
+                    <button class="main-btn">Start Building Your Vault<i class="fa-solid fa-arrow-right"></i></button>
+                    <button class="btn-2"><i class="fa-solid fa-play"></i>See How It Works</button>
                 </div>
 
             </div>
@@ -56,17 +56,17 @@
                     <p class="card-p">Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="card">
-                    <div class="icon-circle"><img src="./assets/Vector.png"></div>
+                    <div class="icon-circle"><img src="./assets/Bookmarks.png"></div>
                     <h3 class="card-h">Bookmark Overload</h3>
                     <p class="card-p">Hundreds of saved links you'll never revisit or remember.</p>
                 </div>
                 <div class="card">
-                    <div class="icon-circle"><img src="./assets/Vector.png"></div>
+                    <div class="icon-circle"><img src="./assets/Brain.png"></div>
                     <h3 class="card-h">No Idea Connections</h3>
                     <p class="card-p">Insights stay isolated, never building into bigger understanding.</p>
                 </div>
                 <div class="card">
-                    <div class="icon-circle"><img src="./assets/Vector.png"></div>
+                    <div class="icon-circle"><img src="./assets/Info.png"></div>
                     <h3 class="card-h">Forgetting What WeLearned</h3>
                     <p class="card-p">Knowledge fades because there's no system to retain it.</p>
                 </div>
@@ -85,10 +85,10 @@
                         where every note, link, and summary becomes part of an interconnected web of understanding.</p>
                 </div>
                 <ul class="tik">
-                    <li>Capture ideas with structure built-in from day one</li>
-                    <li>Connect related concepts automatically as you write</li>
-                    <li>Build lasting knowledge through reflection prompts</li>
-                    <li>Find anything instantly with semantic search</li>
+                    <img src="./assets/CheckCircle.png">Capture ideas with structure built-in from day one <br>
+                    <img src="./assets/CheckCircle.png">Connect related concepts automatically as you write <br>
+                    <img src="./assets/CheckCircle.png">Build lasting knowledge through reflection prompts <br>
+                    <img src="./assets/CheckCircle.png">Find anything instantly with semantic search
                 </ul>
             </div>
         </section>
